product_docs/docs/warehousepg/7.4/release_notes/index.mdx
---
title: WarehousePG 7.x release notes
navTitle: Release notes
originalFilePath: ''
---

The WarehousePG documentation describes the latest version of WarehousePG 7.

| Version                     | Release date |
|-----------------------------|--------------|
| [7.4.1-WHPG](#warehousepg-741-whpg)    | 11 June 2026  |
| [7.4.0-WHPG](#warehousepg-740-whpg)    | 7 April 2026  |
| [7.3.2-WHPG](#warehousepg-732-whpg)    | 11 June 2026  |
| [7.3.1-WHPG](#warehousepg-731-whpg)    | 30 January 2026  |
| [7.3.0-WHPG](#warehousepg-730-whpg)    | 14 November 2025  |
| [7.2.2-WHPG](#warehousepg-722-whpg)    | 17 November 2025 | 
| [7.2.1-WHPG](#warehousepg-721-whpg)    | 15 May 2025 | 

## WarehousePG 7.4.1-WHPG

Released: 11 June 2026

WarehousePG 7.4.1-WHPG includes the following bug fixes and other changes:

### Bug fixes

-   Fixed a build failure with LLVM 21 in the JIT compilation subsystem.

### Security

-   Hardened multiple modules against integer overflow vulnerabilities for [CVE-2026-6473](https://github.com/advisories/GHSA-8rqw-w7xq-566r), including ltree, `ts_headline`, intarray, the regex engine, `unicode_normalize`, `formatting.c`, `array_agg`, and the hstore PL/Perl and PL/Python extensions.
-   Fixed a format-string vulnerability in `timeofday()` for [CVE-2026-6474](https://github.com/advisories/GHSA-qhm2-px33-58v8) where a crafted time zone setting could abuse the `pg_strftime()` `%Z` format specifier to cause crashes or corrupt server memory.
-   Fixed a path traversal vulnerability in `pg_rewind` for [CVE-2026-6475](https://github.com/advisories/GHSA-7h2q-899j-9636) where paths received from a rogue endpoint could overwrite files outside the target directory.
-   Fixed a buffer overrun in the frontend large object interface (`libpq`) for [CVE-2026-6477](https://github.com/advisories/GHSA-jm5f-gpfq-q9h3) where `PQfn()` could write beyond the end of the result buffer when the server returned more data than requested.
-   Added timing-safe comparisons for secret material in all authentication paths for [CVE-2026-6478](https://github.com/advisories/GHSA-r6v6-v5r9-3ggh), covering SCRAM, MD5, RADIUS, and plain authentication methods.
-   Fixed a stack overflow vulnerability in `ProcessStartupPacket()` for [CVE-2026-6479](https://github.com/advisories/GHSA-hwfh-mh4f-m67f) where a malicious client could alternate SSL and GSS negotiation requests indefinitely to exhaust server stack space.
-   Fixed an SQL injection and buffer overrun vulnerability in the `refint` contrib module for [CVE-2026-6637](https://github.com/advisories/GHSA-96xx-m79q-xh44).

## WarehousePG 7.4.0-WHPG

Released: 7 April 2026

WarehousePG 7.4.0-WHPG includes the following new features, enhancements, bug fixes, and other changes:

### New features

- Introduced `pg_stat_statements` for WarehousePG, extending standard PostgreSQL statistics collection to include all segment nodes. 
- Implemented `DISTRIBUTED COORDINATOR ONLY` tables to allow metadata to reside exclusively on the coordinator node, supporting specialized use cases where extensions must access data during early-stage query processing before distributed execution begins.

### Enhancements

- Added automatic fallback to the Postgres planner when `vchord` indexes are present.
- Simplified the `gp_stat_progress_copy_summary` view and corrected issues where `NULL` values were improperly handled.
- Enabled the `get_ao_compression_ratio()` function to execute in query executors.
- Optimized internal cluster communications by improving the performance of Interconnect (IC) UDP processes and eliminating stale file descriptor warnings, resulting in more stable and faster data exchange between nodes.

### Bug fixes

- Improved query planner accuracy for anti-joins and left anti-semi joins by resolving a double-calculation error in join selectivity. This fix resolves issues where underestimated join costs led to inefficient query plans, resulting in significantly faster performance for complex analytical workloads.
- Resolved critical stability issues in the ORCA optimizer, including fixes for segmentation faults, infinite recursion, and improper motion creation on QE slices.
- Fixed ORCA `regr_count` scalar subquery decorrelation to prevent planning errors during complex aggregations.
- Resolved an issue where ORCA failed to handle views with unused CTEs after changes were made to underlying table structures.
- Improved DXL translation by fixing the handling of required but unused columns.
- Fixed `gpcheckcat` inconsistencies encountered when using the SCRAM-SHA-256 authentication algorithm.
- Ensured `initdb` only evaluates `errno` when a system call explicitly fails, preventing successful directory operations from being incorrectly reported as errors due to residual error codes from previous tasks.
- Ensured `isolation2` test compatibility for Python 3.14 by explicitly setting the subprocess start method to `fork`, preventing `cannot pickle TextIOWrapper` errors caused by the change in Python's default process spawning behavior on Linux.

### Security

- Mitigated SQL injection risks in `pg_dump` and `pg_dumpall` for [CVE-2025-8715](https://github.com/advisories/GHSA-xh8r-9824-53cf) by ensuring object names containing newlines are properly sanitized before being written as comments in backup files, preventing a vulnerability where maliciously crafted names could execute arbitrary SQL during the restore process.
- Fixed a heap buffer overflow vulnerability in libpq for [CVE-2025-12818](https://github.com/advisories/GHSA-pr6x-gg24-6wfp) by hardening memory allocation against integer overflows. This change implements stricter `size_t` calculations for large, untrusted inputs to ensure allocated buffers are sufficient for their contents.

## WarehousePG 7.3.2-WHPG

Released: 11 June 2026

WarehousePG 7.3.2-WHPG includes the following bug fixes and other changes:

### Bug fixes

-   Fixed a build failure with LLVM 21 in the JIT compilation subsystem.

### Security

-   Hardened multiple modules against integer overflow vulnerabilities for [CVE-2026-6473](https://github.com/advisories/GHSA-8rqw-w7xq-566r), including ltree, `ts_headline`, intarray, the regex engine, `unicode_normalize`, `formatting.c`, `array_agg`, and the hstore PL/Perl and PL/Python extensions.
-   Fixed a format-string vulnerability in `timeofday()` for [CVE-2026-6474](https://github.com/advisories/GHSA-qhm2-px33-58v8) where a crafted time zone setting could abuse the `pg_strftime()` `%Z` format specifier to cause crashes or corrupt server memory.
-   Fixed a path traversal vulnerability in `pg_rewind` for [CVE-2026-6475](https://github.com/advisories/GHSA-7h2q-899j-9636) where paths received from a rogue endpoint could overwrite files outside the target directory.
-   Fixed a buffer overrun in the frontend large object interface (`libpq`) for [CVE-2026-6477](https://github.com/advisories/GHSA-jm5f-gpfq-q9h3) where `PQfn()` could write beyond the end of the result buffer when the server returned more data than requested.
-   Added timing-safe comparisons for secret material in all authentication paths for [CVE-2026-6478](https://github.com/advisories/GHSA-r6v6-v5r9-3ggh), covering SCRAM, MD5, RADIUS, and plain authentication methods.
-   Fixed a stack overflow vulnerability in `ProcessStartupPacket()` for [CVE-2026-6479](https://github.com/advisories/GHSA-hwfh-mh4f-m67f) where a malicious client could alternate SSL and GSS negotiation requests indefinitely to exhaust server stack space.
-   Fixed an SQL injection and buffer overrun vulnerability in the `refint` contrib module for [CVE-2026-6637](https://github.com/advisories/GHSA-96xx-m79q-xh44).

## WarehousePG 7.3.1-WHPG

Released: 30 January 2026

WarehousePG 7.3.1-WHPG includes the following new features, enhancements, bug fixes, and other changes:

### Enhancements

- Allowed parallel workers to retrieve combo command ids and distributed snapshots directly from Dynamic Shared Memory (DSM).
- Implemented pipes instead of sockets to terminate `poll()` blocking immediately for faster process signaling.
- Added native support for executing `customscans` within the engine.
- Made the `rescanforeignscan` callback optional for foreign data wrappers to improve FDW compatibility.
- Configured GDD to push transaction ids into waitgxids so the query dispatcher can wait on them effectively.
- Appended the WarehousePG name to the end of the version string for better identification.
- Replaced `spinlocks` with `lwlocks` at the instrumentation header to reduce CPU contention.
- Implemented pipes instead of sockets to terminate `poll()` blocking immediately for faster process signaling.
- Updated the build instructions for RHEL8 and RHEL9 systems.
- Updated regression test outputs to reflect recent FDW rescan changes.


### Bug fixes

- Fixed a critical issue with shared snapshots in DSM to prevent potential data loss.
- Resolved a crash in ORCA when processing percentile aggregates.
- Fixed a crash and incorrect results when using distinct qualified aggregates (DQA) with a filter clause.
- Initialized missing `plannedstmt` fields in ORCA to prevent execution errors. 
- Corrected the handling of required but unused columns during DXL translation.
- Fixed an incorrect join type assignment when pulling up expression sub-links.
- Adjusted the severity level to warning in `ftsprobe.c` under specific conditions to reduce log noise.
- Removed the `guc_no_show_all` flag for the `archive_timeout` setting. 
- Fixed an invalid escape sequence in the `recoveryinfo.py` script.
- Resolved an intermittent failure case in the `pg_waldump` tests.
- Corrected the return type of `gddctxgetmaxvid()` to use `DistributedTransactionId(uint64)`.
- Removed the deprecated `pkg_resources` dependency from the Python environment.


## WarehousePG 7.3.0-WHPG

Released: 14 November 2025

WarehousePG 7.3.0-WHPG includes the following new features, enhancements, bug fixes, and other changes:

### Enhancements

- Enabled parallel workers context for index builds to improve creation speed. 
- Merged Postgres 12 `llvm` changes and implemented explicit `llvmcontextref` for JIT inlining. 
- Configured the system to insert WAL records uncompressed if compression fails, ensuring write continuity.
- Updated the copy utility to print the specific `errno` for program pipes. 
- Prevented the sorting of in-memory tuples when a process has already been interrupted.
- Enabled builds for the `intarray` and `unaccent` extensions. 
- Updated `waitgxids` to use `int64` for better handling of transaction ids. 
- Added support for PL/Python2 testing.
- Improved the reliability of error detection in status_check cases. 
- Updated the PR template and `.editorconfig` settings. 


### Bug fixes

- **High availability:** Fixed mirror promotion failures related to WAL segment renaming.
- Resolved a `VACUUM` issue on `AOCS` tables following an aborted `ADD COLUMN` transaction.
- Corrected `pg_exttable` view outputs specifically for ARM systems.
- Implemented recursive calls in the plan walker for `MergeAppend` to ensure plan integrity.
- Fixed a logic error involving `SubPlan PlaceHolderVar`.
- Removed extra blank lines in `EXPLAIN` output. 
- Silenced harmless `fsync` errors when parent directories are removed. 
- Fixed a `NULL` pointer error during `COPY (SELECT) TO` option validation.
- Dispatched ICU collation comments correctly.
- Stopped reporting `compresstype`, `zlib`, or `zstd` errors when not in the validation phase.
- Fixed inconsistent test cases for `REINDEX TABLE`, `REINDEX INDEX`, and `EXPLAIN FORMAT`.
- Fixed the `gpcheckcat` `mix_distribution_policy` test.
- Replaced the deprecated Python pipes module. 
- Removed `gsutil` from developer requirements. 

### Security

- Included a fix for [CVE-2025-1094](https://github.com/advisories/GHSA-mhw9-x46c-v6q4).  

## WarehousePG 7.2.2-WHPG

Released: 17 November 2025

WarehousePG 7.2.2-WHPG includes the following new features, enhancements, bug fixes, and other changes:

### Enhancements

- Enabled parallel workers context for index builds to reduce execution time.
- Optimized resource usage by skipping the sorting of in-memory tuples when a process is interrupted.
- Configured WAL records to be inserted uncompressed as a fallback if compression fails.
- Enhanced diagnostic output by printing the specific `errno` for copy program pipes.
- Improved concurrency handling by using `int64` for `waitgxids`.
- Enabled the `unaccent` extension by default.
- Added PL/Python2 testing support for WarehousePG 7 environments.
- Improved the reliability of error detection for `status_check` operations.

### Bug fixes

- Fixed a failure in mirror promotion caused by WAL segment renaming.
- Resolved a vacuuming issue on `AOCS` tables that occurred after aborted add column transactions.
- Corrected `pg_exttable` view data for ARM-based architectures.
- Implemented recursive calls in the plan walker for `mergeappend` to ensure correct plan traversal.
- Fixed a sub-plan bug related to placeholder variables.
- Suppressed unnecessary blank lines in `EXPLAIN` output.
- Prevented harmless `fsync` errors from being reported when parent directories are missing.
- Ensured ICU collation comments are dispatched correctly to maintain metadata.
- Stopped reporting `compresstype` errors during the non-validation phase.
- Silenced `zlib` and `zstd` `reloption` errors during the non-validation phase.
- Reverted the fault tolerance service (FTS) enablement for mirror-less clusters.
- Resolved intermittent test failures in `REINDEX TABLE` and `REINDEX INDEX` cases.
- Fixed an intermittent failure in the `explain_format` test case.
- Fixed the `gpcheckcat` `mix_distribution_policy` test.
- Removed the `gsutil` dependency from development requirements.


### Security

- Included a fix for [CVE-2025-1094](https://github.com/advisories/GHSA-mhw9-x46c-v6q4).


## WarehousePG 7.2.1-WHPG

Released: 15 May 2025
WarehousePG 7.2.1-WHPG includes the following new features, enhancements, bug fixes, and other changes:

### Enhancements

- Fixed a `work_mem` reference in hash aggregates to ensure planned memory is fully utilized and reduce unnecessary disk spills.

### Bug fixes

- Resolved a `gpstart` failure caused by a `double free or corruption` error when using OpenSSL 3.2.2.
- Fixed a bug in the Postgres planner where correlated subqueries returned incorrect results due to improper `placeholdervar` handling.
- Resolved an `unexpected gang size` error occasionally encountered in the Postgres planner.
- Initialized `attnumswithentries` to prevent failures during concurrent-only (CO) table rewrites.

### Security

- Included a fix for [CVE-2023-5869](https://github.com/advisories/GHSA-9625-p7pg-3cxg).
- Included a fix for [CVE-2024-7348](https://github.com/advisories/GHSA-3c6g-7v4g-5xcm).
- Included a fix for [CVE-2024-10979](https://github.com/advisories/GHSA-2r9h-x757-8j9q).
- Included a fix for [CVE-2024-10976](https://github.com/advisories/GHSA-9cv8-8vgq-fg45).
- Included a fix for [CVE-2022-41862](https://github.com/advisories/GHSA-fr68-cm8v-7vv6).
- Included a fix for [CVE-2023-39417](https://github.com/advisories/GHSA-jx3x-j983-74m3).
- Included a fix for [CVE-2024-10978](https://github.com/advisories/GHSA-37v9-jh5m-f5pg).
- Included a fix for [CVE-2024-0978](https://github.com/advisories/GHSA-26pv-rxjj-m2pw).
- Included a fix for [CVE-2024-10977](https://github.com/advisories/GHSA-62q4-hc79-94qj).
- Included a fix for [CVE-2023-5870](https://github.com/advisories/GHSA-5gp7-j4r7-g66f).
- Included a fix for [CVE-2023-5868](https://github.com/advisories/GHSA-3f9w-7983-qcmq).
- Included a fix for [CVE-2024-0985](https://github.com/advisories/GHSA-4828-5p9m-g4ff).

